# claude-code-telegram-instances-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml.example  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: architecture.md  bot-runner.md  claude-ui-patterns.md  index.md  installation.md  usage.md
docs/archive/: 2026-02-09-claude-instance-manager-design.md  2026-02-09-claude-instance-manager-plan.md  2026-02-09-installer-design.md  2026-02-09-installer-implementation.md  2026-02-09-phase5bis-plan.md  2026-02-09-python-telegram-bot-docs-design.md  (+2 more)
installer/: configure.py  constants.py  health.py  main.py  manifest.py  platform.py  prerequisites.py  services.py  uninstall.py  upgrade.py
scripts/: bootstrap.sh  bot-runner.sh  capture_claude_ui.py  validate_classifier.py  verify_pyte_capture.py
src/: bot.py  claude_process.py  config.py  database.py  file_handler.py  git_info.py  log_setup.py  main.py  output_parser.py  project_scanner.py  session_manager.py
src/core/: README.md  (+3 more)
systemd/: claude-bot.service
tests/: conftest.py  test_bot.py  test_claude_process.py  test_config.py  test_database.py  test_file_handler.py  test_git_info.py  test_installer_configure.py  test_installer_constants.py  test_installer_health.py  test_installer_main.py  test_installer_manifest.py  test_installer_platform.py  test_installer_prerequisites.py  test_installer_services.py  test_installer_uninstall.py  test_installer_upgrade.py  test_log_setup.py  test_main.py  test_output_parser.py  test_project_scanner.py  test_session_manager.py
(+166 files in other folders)
