[project]
name = "claude-instance-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "pyte>=0.8",
    "pexpect>=4.9",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
]

[project.scripts]
claude-ctim-install = "installer.main:main"
claude-ctim-configure = "installer.configure:main"
claude-ctim-upgrade = "installer.upgrade:main"
claude-ctim-uninstall = "installer.uninstall:main"
claude-ctim-health = "installer.health:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
